--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "xterm-256color"
+set -g escape-time 0
 #========== Mouse Scrolling ==========#
 set-option -g mouse on
 set -g set-clipboard on
