--- a/stow/tmux/.tmux.conf
+++ b/stow/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 set -g default-terminal "xterm-256color"
 set -g escape-time 0
 #========== Mouse Scrolling ==========#
-set-option -g mouse on
-set -g set-clipboard on
+# set-option -g mouse on
+# set -g set-clipboard on
 #========== List of Plugins ==========#
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
