feat: Add tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,12 @@
 set -g default-terminal "xterm-256color"
 set -g escape-time 0
 #========== Mouse Scrolling ==========#
-# set-option -g mouse on
-# set -g set-clipboard on
+set -g mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -s set-clipboard on
+set -g @yank_selection_mouse 'clipboard'
+unbind -T copy-mode MouseDragEnd1Pane
+unbind -T copy-mode-vi MouseDragEnd1Pane
 #========== List of Plugins ==========#
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
