feat: comprehensive dotfiles updates
Neovim:
- Major refactor of myColors.lua with organized Poimandres-inspired theme
- Switch active colorscheme to rose-pine for better defaults
- Remove unused LaTeX plugins (avante, latex, vimtex)

Tmux:
- Disable mouse support for cleaner workflow
- Add vim-style pane navigation (h,j,k,l)
- Simplify configuration with modern syntax and better organization

Zsh:
- Add TeX, pyenv, and local bin paths
- Integrate OpenCode path
- Improve environment setup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,56 +1,37 @@
-set -g default-terminal "xterm-256color"
+# --- Basics ---
+# set -g default-terminal "tmux-256color"
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",*:Tc"
+set -g allow-passthrough on
+# set -g default-terminal "xterm-256color"
+# set -ga terminal-overrides ",xterm-256color:Tc"
 set -g escape-time 0
-#========== Mouse Scrolling ==========#
-set -g mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set -s set-clipboard on
-set -g @yank_selection_mouse 'clipboard'
-unbind -T copy-mode MouseDragEnd1Pane
-unbind -T copy-mode-vi MouseDragEnd1Pane
-#========== List of Plugins ==========#
+set-option -g repeat-time 0
+set-option -g focus-events on
+set-window-option -g mode-keys vi
+
+# --- Mouse: OFF completely ---
+set -g mouse off
+
+# --- Pane navigation ---
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# --- Plugins ---
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-#========== GOTHAM THEME ==========#
-# default statusbar colors
-set-option -g status-bg colour8
-set-option -g status-fg colour11
-#set-option -g status-attr none
 
-# default window title colors
-#set-window-option -g window-status-fg colour14
-#set-window-option -g window-status-bg colour8
-#set-window-option -g window-status-attr dim
-#set-window-option -g window-status-separator ""
+# --- Theme ---
+set -g status-style bg=colour8,fg=colour11
+set -g window-status-style fg=colour14,bg=colour8,dim
+set -g window-status-current-style fg=colour14,bg=colour8,bright
+set -g pane-border-style fg=colour10
+set -g pane-active-border-style fg=colour4
 
-# active window title colors
-#set-window-option -g window-status-current-fg colour14
-#set-window-option -g window-status-current-bg colour8
-#set-window-option -g window-status-current-attr bright
+# --- Powerline (if it exists) ---
+if-shell "[ -f ~/.config/tmux/powerline.conf ]" "source ~/.config/tmux/powerline.conf"
 
-#set-window-option -g window-status-activity-bg colour8
-#set-window-option -g window-status-activity-attr none
-#set-window-option -g window-status-activity-fg colour4
-
-# pane border
-#set-option -g pane-border-fg colour10
-#set-option -g pane-active-border-fg colour4
-
-# message text
-#set-option -g message-bg colour10
-#set-option -g message-fg colour14
-#set-option -g message-command-bg colour10
-#set-option -g message-command-fg colour14
-
-# pane number display
-set-option -g display-panes-active-colour colour8
-set-option -g display-panes-colour colour14
-
-# clock
-set-window-option -g clock-mode-colour colour40 #green
-#========== GOTHAM THEME ==========#
-source ~/.config/tmux/powerline.conf
-
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# --- TPM (keep at bottom) ---
 run '~/.tmux/plugins/tpm/tpm'
-
