--- a/.gitignore
+++ b/.gitignore
@@ -1,108 +1,18 @@
 # Secrets and sensitive files
 secrets.zsh
-*.secret
-*.key
-*.token
-*.pem
-*.p12
-*.pfx
-.env
-.env.*
-config.json
-secrets/
-private/
-
-# Log files
-*.log
-log/
-logs/
-
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
-Thumbs.db
-
-# Temporary files
-*.tmp
-*.temp
-.tmp/
-.temp/
-.repro
-foo.*
 
 # System files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 
-# Package manager files
-node_modules/
-.pnpm-store/
-.yarn/
-.npm/
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# LaTeX
-*.aux
-*.bbl
-*.blg
-*.fdb_latexmk
-*.fls
+# Log files
 *.log
-*.out
-*.synctex.gz
-*.toc
-*.idx
-*.ind
-*.lof
-*.lot
 
-# Neovim
+# Neovim temporary files
 tt.*
 .tests
-doc/tags
-debug
-data
-
-# OpenCode
-.opencode/
-.opencode_cache/
-opencode_cache/
-
-# Tmux
-tmux-client-*.log
-tmux-server-*.log
+.repro
 
 # Backup files
 *.bak
-*.backup
 *~
 .#*
