--- a/ghostty/config
+++ b/ghostty/config
@@ -1,6 +1,9 @@
 # Pastel theme - soft, easy on the eyes
 theme = pastel
 
+# Use xterm-256color for SSH compatibility
+term = xterm-256color
+
 maximize = true
 
 # Background transparency and blur - soft and easy on the eyes
