--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,11 @@
+# --- Remote SSH: use ctrl+a prefix + orange bar ---
+if-shell '[ -n "$SSH_TTY" ]' {
+    set -g prefix C-a
+    unbind C-b
+    bind C-a send-prefix
+    set -g status-bg colour166
+}
+
 # --- Basics ---
 # set -g default-terminal "tmux-256color"
 set -g default-terminal "tmux-256color"
