fix(tmux): use compatible if-shell syntax for older tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,5 @@
 # --- Remote SSH: use ctrl+a prefix + orange bar ---
-if-shell '[ -n "$SSH_TTY" ]' {
-    set -g prefix C-a
-    unbind C-b
-    bind C-a send-prefix
-    set -g status-bg colour166
-}
+if-shell '[ -n "$SSH_TTY" ]' 'set -g prefix C-a; unbind C-b; bind C-a send-prefix; set -g status-bg colour166'
 
 # --- Basics ---
 # set -g default-terminal "tmux-256color"
