--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -121,8 +121,8 @@ on-mode-changed = []
     alt-comma = 'layout accordion horizontal vertical'
 
     # App Launchers
-    alt-enter = 'exec-and-forget open -a Ghostty'
-    alt-b = 'exec-and-forget open -a "Google Chrome"'
+    alt-enter = 'exec-and-forget open -na Ghostty'
+    alt-b = 'exec-and-forget open -na "Google Chrome" --args --new-window'
     alt-d = 'exec-and-forget open -a Discord'
     alt-t = 'exec-and-forget open -a Telegram'
 
