--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,12 +2,9 @@
 if-shell '[ -n "$SSH_TTY" ]' 'set -g prefix C-a; unbind C-b; bind C-a send-prefix; set -g status-bg colour166'
 
 # --- Basics ---
-# set -g default-terminal "tmux-256color"
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",*:Tc"
 set -g allow-passthrough on
-# set -g default-terminal "xterm-256color"
-# set -ga terminal-overrides ",xterm-256color:Tc"
 set -g escape-time 0
 set-option -g repeat-time 0
 set-option -g focus-events on
@@ -26,15 +23,44 @@ bind l select-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# --- Theme ---
-set -g status-style bg=colour8,fg=colour11
-set -g window-status-style fg=colour14,bg=colour8,dim
-set -g window-status-current-style fg=colour14,bg=colour8,bright
-set -g pane-border-style fg=colour10
-set -g pane-active-border-style fg=colour4
+# ═══════════════════════════════════════════════════════════════════════════════
+#  CATPPUCCIN-STYLE THEME (Ghostty Pastel Colors)
+# ═══════════════════════════════════════════════════════════════════════════════
 
-# --- Powerline (if it exists) ---
-if-shell "[ -f ~/.config/tmux/powerline.conf ]" "source ~/.config/tmux/powerline.conf"
+# Status bar
+set -g status on
+set -g status-interval 2
+set -g status-position bottom
+set -g status-justify left
+set -g status-style "bg=#1a1a1a,fg=#bbbbbb"
+set -g status-left-length 100
+set -g status-right-length 100
+
+# Pane borders
+set -g pane-border-style "fg=#3a3a3a"
+set -g pane-active-border-style "fg=#7dd3c0"
+
+# Message styling
+set -g message-style "bg=#2a2a2a,fg=#7dd3c0"
+set -g message-command-style "bg=#2a2a2a,fg=#7dd3c0"
+
+# Mode styling (copy mode)
+set -g mode-style "bg=#7dd3c0,fg=#1a1a1a"
+
+# ── Status Left (Session) ──
+set -g status-left "#[fg=#1a1a1a,bg=#7dd3c0,bold]  #S #[fg=#7dd3c0,bg=#1a1a1a]"
+
+# ── Window Status ──
+set -g window-status-format "#[fg=#1a1a1a,bg=#2a2a2a]#[fg=#6c6c6c,bg=#2a2a2a] #I #W #[fg=#2a2a2a,bg=#1a1a1a]"
+set -g window-status-current-format "#[fg=#1a1a1a,bg=#96cbfe]#[fg=#1a1a1a,bg=#96cbfe,bold] #I #W #[fg=#96cbfe,bg=#1a1a1a]"
+set -g window-status-separator ""
+
+# ── Status Right (Info Modules) ──
+set -g status-right "#[fg=#2a2a2a,bg=#1a1a1a]#[fg=#bbbbbb,bg=#2a2a2a]  #(whoami) #[fg=#3a3a3a,bg=#2a2a2a]#[fg=#eeeeee,bg=#3a3a3a]  %H:%M #[fg=#7dd3c0,bg=#3a3a3a]#[fg=#1a1a1a,bg=#7dd3c0,bold]  %b %d "
+
+# Clock
+set -g clock-mode-colour "#7dd3c0"
+set -g clock-mode-style 24
 
 # --- TPM (keep at bottom) ---
 run '~/.tmux/plugins/tpm/tpm'
