--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,42 +24,33 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # ═══════════════════════════════════════════════════════════════════════════════
-#  CATPPUCCIN-STYLE THEME (Ghostty Pastel Colors)
+#  CATPPUCCIN THEME (Official Plugin)
 # ═══════════════════════════════════════════════════════════════════════════════
 
-# Status bar
-set -g status on
-set -g status-interval 2
+# Flavor and style (custom pastel theme matching ghostty)
+set -g @catppuccin_flavor "pastel"
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_current_number_color "#7dd3c0"
+
+# Window naming: show directory name instead of command
+set -g @catppuccin_window_text " #{b:pane_current_path}"
+set -g @catppuccin_window_current_text " #{b:pane_current_path}"
+
+# Load catppuccin BEFORE status line config
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+# Status bar position
 set -g status-position bottom
 set -g status-justify left
-set -g status-style "bg=#1a1a1a,fg=#bbbbbb"
 set -g status-left-length 100
 set -g status-right-length 100
 
-# Pane borders
-set -g pane-border-style "fg=#3a3a3a"
-set -g pane-active-border-style "fg=#7dd3c0"
-
-# Message styling
-set -g message-style "bg=#2a2a2a,fg=#7dd3c0"
-set -g message-command-style "bg=#2a2a2a,fg=#7dd3c0"
-
-# Mode styling (copy mode)
-set -g mode-style "bg=#7dd3c0,fg=#1a1a1a"
-
-# ── Status Left (Session) ──
-set -g status-left "#[fg=#1a1a1a,bg=#7dd3c0,bold]  #S #[fg=#7dd3c0,bg=#1a1a1a]"
-
-# ── Window Status ──
-set -g window-status-format "#[fg=#1a1a1a,bg=#2a2a2a]#[fg=#6c6c6c,bg=#2a2a2a] #I #W #[fg=#2a2a2a,bg=#1a1a1a]"
-set -g window-status-current-format "#[fg=#1a1a1a,bg=#96cbfe]#[fg=#1a1a1a,bg=#96cbfe,bold] #I #W #[fg=#96cbfe,bg=#1a1a1a]"
-set -g window-status-separator ""
-
-# ── Status Right (Info Modules) ──
-set -g status-right "#[fg=#2a2a2a,bg=#1a1a1a]#[fg=#bbbbbb,bg=#2a2a2a]  #(whoami) #[fg=#3a3a3a,bg=#2a2a2a]#[fg=#eeeeee,bg=#3a3a3a]  %H:%M #[fg=#7dd3c0,bg=#3a3a3a]#[fg=#1a1a1a,bg=#7dd3c0,bold]  %b %d "
+# Status content using catppuccin modules
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_date_time}"
 
 # Clock
-set -g clock-mode-colour "#7dd3c0"
 set -g clock-mode-style 24
 
 # --- TPM (keep at bottom) ---
