Update tool configurations: Ghostty, Neovim highlights, and OpenCode models

--- a/ghostty/config
+++ b/ghostty/config
@@ -2,6 +2,7 @@
 theme = pastel
 
 copy-on-select = clipboard
+selection-clear-on-copy = true
 
 # Use xterm-256color for SSH compatibility
 term = xterm-256color
