--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
-# --- Remote SSH: use ctrl+a prefix + orange bar ---
-if-shell '[ -n "$SSH_TTY" ]' 'set -g prefix C-a; unbind C-b; bind C-a send-prefix; set -g status-bg colour166'
+# --- Remote SSH: orange status bar ---
+if-shell '[ -n "$SSH_TTY" ]' 'set -g status-bg colour166'
 
 # --- Basics ---
 set -g default-terminal "tmux-256color"
