--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,4 +54,5 @@ set -ag status-right "#{E:@catppuccin_status_date_time}"
 set -g clock-mode-style 24
 
 # --- TPM (keep at bottom) ---
+if-shell 'test ! -d ~/.tmux/plugins/tpm' "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 run '~/.tmux/plugins/tpm/tpm'
