feat(tmux): change catppuccin flavor to mocha and use default remote status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
-# --- Remote SSH: orange status bar ---
-if-shell '[ -n "$SSH_TTY" ]' 'set -g status-bg colour166'
+## --- Remote SSH: keep default status bar ---
+if-shell '[ -n "$SSH_TTY" ]' 'set -g status-bg default'
 
 # --- Basics ---
 set -g default-terminal "tmux-256color"
@@ -27,8 +27,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 #  CATPPUCCIN THEME (Official Plugin)
 # ═══════════════════════════════════════════════════════════════════════════════
 
-# Flavor and style (custom pastel theme matching ghostty)
-set -g @catppuccin_flavor "pastel"
+# Flavor and style (official flavor for portability)
+set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_current_number_color "#7dd3c0"
 
