--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,6 @@
-## --- Remote SSH: keep default status bar ---
-if-shell '[ -n "$SSH_TTY" ]' 'set -g status-bg default'
-
 # --- Basics ---
-set -g default-terminal "tmux-256color"
-set -as terminal-overrides ",*:Tc"
-set -g allow-passthrough on
+set -g default-terminal "xterm-256color"
+set -as terminal-overrides ",xterm-256color:Tc"
 set -g escape-time 0
 set-option -g repeat-time 0
 set-option -g focus-events on
@@ -13,11 +9,26 @@ set-window-option -g mode-keys vi
 # --- Mouse: OFF completely ---
 set -g mouse off
 
+# --- Env passthrough for system theme detection ---
+set -ga update-environment "TERM_PROGRAM TERM_PROGRAM_VERSION COLORTERM COLORFGBG"
+
+# --- Transparent background ---
+set -g window-style "bg=default"
+set -g window-active-style "bg=default"
+set -g pane-border-style "fg=white,bg=default"
+set -g pane-active-border-style "fg=white,bg=default"
+
 # --- Pane navigation ---
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# --- OpenCode popup session ---
+# prefix + Y opens (or reopens) the popup session
+bind Y display-popup -E -w 80% -h 80% -d "#{pane_current_path}" "tmux new-session -Ad -s opencode -c \"#{pane_current_path}\" env TERM=tmux-256color /bin/zsh -lic opencode; tmux attach -t opencode"
+# prefix + y minimizes (detaches) the popup client
+bind y detach-client
 
 # --- Plugins ---
 set -g @plugin 'tmux-plugins/tpm'
@@ -38,6 +49,14 @@ set -g @catppuccin_window_current_text " #{b:pane_current_path}"
 
 # Load catppuccin BEFORE status line config
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+# --- Popup style (transparent background, white borders) ---
+set -g popup-style "fg=default,bg=default"
+set -g popup-border-style "fg=white,bg=default"
+
+# --- Force pane borders after catppuccin ---
+set -g pane-border-style "fg=white,bg=default"
+set -g pane-active-border-style "fg=white,bg=default"
 
 # Status bar position
 set -g status-position bottom
