--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,6 +42,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_current_number_color "#7dd3c0"
+set -g @catppuccin_status_left_separator ""
+set -g @catppuccin_status_middle_separator " "
+set -g @catppuccin_status_right_separator ""
 
 # Window naming: show directory name instead of command
 set -g @catppuccin_window_text " #{b:pane_current_path}"
@@ -68,6 +71,9 @@ set -g status-right-length 100
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_date_time}"
+
+# Make the catppuccin powerline thicker (second status line)
+set -g status-format[1] " "
 
 # Clock
 set -g clock-mode-style 24
