opencode: add remote tmux system-theme fallback

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 # --- Basics ---
 set -g default-terminal "xterm-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
+set -g allow-passthrough on
 set -g escape-time 0
 set-option -g repeat-time 0
 set-option -g focus-events on
@@ -10,7 +11,7 @@ set-window-option -g mode-keys vi
 set -g mouse off
 
 # --- Env passthrough for system theme detection ---
-set -ga update-environment "TERM_PROGRAM TERM_PROGRAM_VERSION COLORTERM COLORFGBG"
+set -ga update-environment "TERM_PROGRAM TERM_PROGRAM_VERSION COLORTERM COLORFGBG OPENCODE_THEME_FALLBACK"
 
 # --- Transparent background ---
 set -g window-style "bg=default"
@@ -63,6 +64,7 @@ set -g pane-active-border-style "fg=white,bg=default"
 
 # Status bar position
 set -g status-position bottom
+set -g status 2
 set -g status-justify left
 set -g status-left-length 100
 set -g status-right-length 100
