tmux: default opencode fallback to system

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,9 +43,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_current_number_color "#7dd3c0"
-set -g @catppuccin_status_left_separator ""
+set -g @catppuccin_status_left_separator ""
 set -g @catppuccin_status_middle_separator " "
-set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator ""
 
 # Window naming: show directory name instead of command
 set -g @catppuccin_window_text " #{b:pane_current_path}"
