--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,7 +41,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Flavor and style (official flavor for portability)
 set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_status_style "basic"
 set -g @catppuccin_window_current_number_color "#7dd3c0"
 set -g @catppuccin_status_left_separator ""
 set -g @catppuccin_status_middle_separator " "
@@ -54,6 +54,11 @@ set -g @catppuccin_window_current_text " #{b:pane_current_path}"
 # Load catppuccin BEFORE status line config
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
+# Make status segments visually heavier without changing terminal font size
+set -ag status-style ",bold"
+set -ag window-status-style ",bold"
+set -ag window-status-current-style ",bold"
+
 # --- Popup style (transparent background, white borders) ---
 set -g popup-style "fg=default,bg=default"
 set -g popup-border-style "fg=white,bg=default"
@@ -64,7 +69,7 @@ set -g pane-active-border-style "fg=white,bg=default"
 
 # Status bar position
 set -g status-position bottom
-set -g status 2
+set -g status on
 set -g status-justify left
 set -g status-left-length 100
 set -g status-right-length 100
