--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,7 @@ set -g mouse off
 
 # --- Env passthrough for system theme detection ---
 set -ga update-environment "TERM_PROGRAM TERM_PROGRAM_VERSION COLORTERM COLORFGBG OPENCODE_THEME_FALLBACK"
+set-environment -g OPENCODE_THEME_FALLBACK "system"
 
 # --- Transparent background ---
 set -g window-style "bg=default"
@@ -34,6 +35,7 @@ bind y detach-client
 # --- Plugins ---
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
 
 # ═══════════════════════════════════════════════════════════════════════════════
 #  CATPPUCCIN THEME (Official Plugin)
@@ -41,7 +43,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Flavor and style (official flavor for portability)
 set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "basic"
+set -g @catppuccin_window_status_style "custom"
+set -g @catppuccin_window_left_separator "["
+set -g @catppuccin_window_middle_separator " "
+set -g @catppuccin_window_right_separator "]"
+set -g @catppuccin_window_current_left_separator "#[fg=#{@_ctp_status_bg},reverse]#[none]"
+set -g @catppuccin_window_current_middle_separator " "
+set -g @catppuccin_window_current_right_separator "#[fg=#{@_ctp_status_bg},reverse]#[none]"
 set -g @catppuccin_window_current_number_color "#7dd3c0"
 set -g @catppuccin_status_left_separator ""
 set -g @catppuccin_status_middle_separator " "
@@ -51,8 +59,9 @@ set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_window_text " #{b:pane_current_path}"
 set -g @catppuccin_window_current_text " #{b:pane_current_path}"
 
-# Load catppuccin BEFORE status line config
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# Load catppuccin BEFORE status line config.
+# Prefer TPM path, then legacy path, then fallback to local powerline config.
+if-shell '[ -f ~/.tmux/plugins/catppuccin/catppuccin.tmux ]' "run '~/.tmux/plugins/catppuccin/catppuccin.tmux'" "if-shell '[ -f ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux ]' \"run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'\" \"source-file ~/.config/tmux/powerline.conf\""
 
 # Make status segments visually heavier without changing terminal font size
 set -ag status-style ",bold"
