--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,13 +44,15 @@ set -g @plugin 'catppuccin/tmux'
 # Flavor and style (official flavor for portability)
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "custom"
-set -g @catppuccin_window_left_separator "["
+set -g @catppuccin_window_left_separator "#[fg=#{@_ctp_status_bg},reverse]█#[none]"
 set -g @catppuccin_window_middle_separator " "
-set -g @catppuccin_window_right_separator "]"
+set -g @catppuccin_window_right_separator "#[fg=#{@_ctp_status_bg},reverse]█#[none]"
 set -g @catppuccin_window_current_left_separator "#[fg=#{@_ctp_status_bg},reverse]#[none]"
 set -g @catppuccin_window_current_middle_separator " "
 set -g @catppuccin_window_current_right_separator "#[fg=#{@_ctp_status_bg},reverse]#[none]"
 set -g @catppuccin_window_current_number_color "#7dd3c0"
+set -g @catppuccin_window_number_color "#{@thm_red}"
+set -g @catppuccin_window_text_color "#{@thm_surface_1}"
 set -g @catppuccin_status_left_separator ""
 set -g @catppuccin_status_middle_separator " "
 set -g @catppuccin_status_right_separator ""
