--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
 # --- Basics ---
+# NOTE: OpenCode system-theme/palette detection requires tmux 3.6+.
+# Older tmux versions can leak probe sequences and fall back to default theme.
 set -g default-terminal "xterm-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
 set -g allow-passthrough on
